k8s/splunk/splunk.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  labels:
    role: splunk
  name: splunk
spec:
  rules:
  - host: splunk-cicd.ping-devops.com
    http:
      paths:
      - backend:
          serviceName: splunk
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - splunk-cicd.ping-devops.com
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: splunk
  name: splunk
spec:
  ports:
  - name: http
    port: 8000
  - name: https
    port: 8088
  - name: receiver
    port: 9997
  - name: statsd
    port: 9990
    protocol: UDP
  selector:
    role: splunk

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: splunk
  name: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      role: splunk
  template:
    metadata:
      labels:
        role: splunk
      name: splunk
    spec:
      volumes:
        - name: splunk-data
          persistentVolumeClaim:
            claimName: splunk-data
      containers:
      - env:
        - name: SPLUNK_PASSWORD
          value: 
        - name: SPLUNK_START_ARGS
          value: --accept-license
        name: splunk
        image: splunk/splunk:latest
        ports:
          - containerPort: 8000
            name: "http"
          - containerPort: 8088
            name: "https"
          - containerPort: 9997
            name: "receiver"
          - name: statsd
            containerPort: 9990
        volumeMounts:
          # - mountPath: /opt/splunk/etc
          #   name: splunk-config
          - mountPath: /opt/splunk/var
            name: splunk-data
        resources:
          limits:
            cpu: "3"
            memory: 3.5Gi
          requests:
            cpu: "1"
            memory: 3.5Gi
